--- a/config
+++ b/config
@@ -20,28 +20,28 @@ focus_follows_mouse no
 bindsym $mod+Shift+q kill
 
 # Chance focus.
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod+Shift+h focus left
+bindsym $mod+Shift+j focus down
+bindsym $mod+Shift+k focus up
+bindsym $mod+Shift+l focus right
 
 # Alternatively use arrow keys.
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $mod+Shift+Left focus left
+bindsym $mod+Shift+Down focus down
+bindsym $mod+Shift+Up focus up
+bindsym $mod+Shift+Right focus right
 
 # Move focused window.
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+#bindsym $mod+Shift+h move left
+#bindsym $mod+Shift+j move down
+#bindsym $mod+Shift+k move up
+#bindsym $mod+Shift+l move right
 
 # Alternatively use arrow keys.
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+#bindsym $mod+Shift+Left move left
+#bindsym $mod+Shift+Down move down
+#bindsym $mod+Shift+Up move up
+#bindsym $mod+Shift+Right move right
 
 # Split in horizontal orientation.
 bindsym $mod+t split h
@@ -105,15 +105,18 @@ bindsym $mod+d exec dmenu_run
 
 # If you prefer Rofi to dmenu, you can comment out the above and use this
 # instead. Remember to install the Rofi package: 'doas pkg install rofi'.
-#bindsym $mod+d exec "rofi -combi-modi window,drun -show combi -modi combi"
+bindsym $mod+q exec "rofi -combi-modi window,drun -show combi -modi combi"
 
 # Key combination for some of my favorite applications.
-bindsym $mod+Return exec "xterm"
-bindsym $mod+Shift+m exec "claws-mail"
-bindsym $mod+Shift+g exec "gimp"
+bindsym $mod+Return exec "xfce4-terminal"
+bindsym $mod+Shift+e exec "gedit"
 bindsym $mod+Shift+f exec "firefox"
-bindsym $mod+Shift+t exec "hexchat"
+bindsym $mod+Shift+w exec "xrdesktop"
 bindsym $mod+Shift+z exec "filezilla"
+bindsym $mod+Shift+d exec "doublecmd"
+bindsym $mod+Shift+g exec "geany"
+bindsym $mod+Shift+v exec "pavucontrol"
+
 
 # Map the print key to gnome-screenshot.
 bindsym Print exec "gnome-screenshot -i"
@@ -136,10 +139,10 @@ bindsym $mod+Control+l exec "i3lock -t -i ~/.lock1.png --color=000000"
 bindsym $mod+u [urgent=latest] focus
 
 # Reload the configuration file.
-bindsym $mod+Shift+r reload
+#bindsym $mod+Shift+r reload
 
 # Restart i3 inplace (preserves your layout/session, can be used to upgrade i3).
-bindsym $mod+Shift+e restart
+bindsym $mod+Shift+r restart
 
 # Exit i3 (logs you out of your X session).
 # In my case I don't want a warning or anything, so be careful about pressing
@@ -184,7 +187,7 @@ bar {
         urgent_workspace   #aa0000 #990000 #ffffff
     }
     position top
-    status_command ~/.config/i3/conky-i3bar.sh
+    status_command /usr/local/bin/i3status
 }
 
 ## Autostart applicatons ##
@@ -197,4 +200,6 @@ exec --no-startup-id "nitrogen --restore"
 # way to do it. As an example I am swithing between a Danish and an Arabic
 # keyboard layout in this setup.
 # You switch between layouts by pressing "left CTRL + right CTRL".
-exec --no-startup-id "setxkbmap -layout dk,ara -option grp:ctrls_toggle"
+exec --no-startup-id "setxkbmap -layout us"
+exec "volumeicon"
+#exec xrandr --output default --mode 1280x768
