added new gnome settings

--- a/gnome-settings.ini
+++ b/gnome-settings.ini
@@ -42,7 +42,7 @@ window-size=(680, 584)
 word-size=64
 
 [org/gnome/control-center]
-last-panel='display'
+last-panel='sound'
 window-state=(980, 640, false)
 
 [org/gnome/desktop/app-folders]
@@ -67,8 +67,8 @@ translate=true
 [org/gnome/desktop/background]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///home/dan/.local/share/backgrounds/2024-08-31-20-55-26-DSCF0276.JPG'
-picture-uri-dark='file:///home/dan/.local/share/backgrounds/2024-08-31-20-55-26-DSCF0276.JPG'
+picture-uri='file:///usr/share/backgrounds/verne/extras/sunset.jpg'
+picture-uri-dark='file:///usr/share/backgrounds/verne/extras/sunset.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -78,6 +78,7 @@ automatic-timezone=false
 [org/gnome/desktop/input-sources]
 current=uint32 0
 sources=[('xkb', 'us')]
+xkb-options=@as []
 
 [org/gnome/desktop/interface]
 clock-format='24h'
@@ -86,7 +87,8 @@ show-battery-percentage=true
 toolkit-accessibility=false
 
 [org/gnome/desktop/notifications]
-application-children=['org-gnome-software', 'org-mozilla-firefox', 'google-chrome', 'wps-office-wps', 'org-gnome-extensions', 'chrome-cifhbcnohmdccbgoicgdjpfamggdegmo-default', 'wps-office-prometheus', 'org-gnome-settings', 'gnome-power-panel', 'org-kicad-kicad', 'org-gnome-nautilus', 'filezilla', 'org-gnome-dejadup', 'org-freedesktop-problems-applet', 'org-gnome-loupe', 'io-dbeaver-dbeavercommunity', 'org-gnome-texteditor', 'wps-office-et', 'doublecmd', 'org-remmina-remmina', 'cqrlog', 'org-gnome-baobab', 'com-wps-office-et', 'anydesk', 'org-gnome-terminal', 'gnome-printers-panel', 'org-sdrangel-sdrangel', 'org-freedesktop-gnomeabrt', 'com-nextcloud-desktopclient-nextcloud', 'wine-programs-echolink-echolink', 'com-wps-office-wps', 'net-scribus-scribus', 'wine-programs-mmana-gal-basic-mmana-gal-basic', 'virt-manager']
+application-children=['org-gnome-software', 'org-mozilla-firefox', 'google-chrome', 'wps-office-wps', 'org-gnome-extensions', 'chrome-cifhbcnohmdccbgoicgdjpfamggdegmo-default', 'wps-office-prometheus', 'org-gnome-settings', 'gnome-power-panel', 'org-kicad-kicad', 'org-gnome-nautilus', 'filezilla', 'org-gnome-dejadup', 'org-freedesktop-problems-applet', 'org-gnome-loupe', 'io-dbeaver-dbeavercommunity', 'org-gnome-texteditor', 'wps-office-et', 'doublecmd', 'org-remmina-remmina', 'cqrlog', 'org-gnome-baobab', 'com-wps-office-et', 'anydesk', 'org-gnome-terminal', 'gnome-printers-panel', 'org-sdrangel-sdrangel', 'org-freedesktop-gnomeabrt', 'com-nextcloud-desktopclient-nextcloud', 'wine-programs-echolink-echolink', 'com-wps-office-wps', 'net-scribus-scribus', 'wine-programs-mmana-gal-basic-mmana-gal-basic', 'virt-manager', 'org-arrl-trustedqsl', 'wine-oleview', 'wine-ltspice-xvii']
+show-banners=true
 
 [org/gnome/desktop/notifications/application/anydesk]
 application-id='anydesk.desktop'
@@ -126,6 +128,9 @@ application-id='io.dbeaver.DBeaverCommunity.desktop'
 
 [org/gnome/desktop/notifications/application/net-scribus-scribus]
 application-id='net.scribus.Scribus.desktop'
+
+[org/gnome/desktop/notifications/application/org-arrl-trustedqsl]
+application-id='org.arrl.trustedqsl.desktop'
 
 [org/gnome/desktop/notifications/application/org-freedesktop-gnomeabrt]
 application-id='org.freedesktop.GnomeAbrt.desktop'
@@ -175,6 +180,12 @@ application-id='org.sdrangel.SDRangel.desktop'
 [org/gnome/desktop/notifications/application/virt-manager]
 application-id='virt-manager.desktop'
 
+[org/gnome/desktop/notifications/application/wine-ltspice-xvii]
+application-id='wine-LTspice XVII.desktop'
+
+[org/gnome/desktop/notifications/application/wine-oleview]
+application-id='wine-oleview.desktop'
+
 [org/gnome/desktop/notifications/application/wine-programs-echolink-echolink]
 application-id='wine-Programs-EchoLink-EchoLink.desktop'
 
@@ -191,7 +202,7 @@ application-id='wps-office-prometheus.desktop'
 application-id='wps-office-wps.desktop'
 
 [org/gnome/desktop/peripherals/keyboard]
-numlock-state=true
+numlock-state=false
 
 [org/gnome/desktop/peripherals/mouse]
 accel-profile='flat'
@@ -216,7 +227,7 @@ view-only=false
 [org/gnome/desktop/screensaver]
 color-shading-type='solid'
 picture-options='zoom'
-picture-uri='file:///home/dan/.local/share/backgrounds/2024-08-31-20-55-26-DSCF0276.JPG'
+picture-uri='file:///usr/share/backgrounds/verne/extras/sunset.jpg'
 primary-color='#000000000000'
 secondary-color='#000000000000'
 
@@ -227,31 +238,35 @@ sort-order=['org.gnome.Contacts.desktop', 'org.gnome.Documents.desktop', 'org.gn
 [org/gnome/desktop/session]
 idle-delay=uint32 900
 
+[org/gnome/desktop/wm/keybindings]
+switch-to-workspace-left=['<Super>Left']
+switch-to-workspace-right=['<Super>Right']
+
 [org/gnome/desktop/wm/preferences]
 button-layout='appmenu:minimize,maximize,close'
 
 [org/gnome/evince]
-document-directory=@ms 'file:///home/dan/Intrasys/intrasys/acte%20personale'
+document-directory=@ms 'file:///home/dan/Intrasys/intrasys/acte%20Intrasys/Passat%20Nou'
 
 [org/gnome/evince/default]
 continuous=true
 dual-page=false
-dual-page-odd-left=true
+dual-page-odd-left=false
 enable-spellchecking=true
 fullscreen=false
 inverted-colors=false
 show-sidebar=true
 sidebar-page='thumbnails'
-sidebar-size=148
-sizing-mode='free'
-window-ratio=(2.2806722689075629, 1.0570071258907363)
+sidebar-size=167
+sizing-mode='automatic'
+window-ratio=(2.2812962600852442, 1.0571454838863708)
 zoom=1.0
 
 [org/gnome/evolution-data-server]
 migrated=true
 
 [org/gnome/gnome-system-monitor]
-current-tab='resources'
+current-tab='processes'
 maximized=false
 show-dependencies=false
 show-whose-processes='user'
@@ -263,6 +278,8 @@ col-6-visible=true
 col-6-width=0
 
 [org/gnome/gnome-system-monitor/proctree]
+col-26-visible=false
+col-26-width=0
 columns-order=[0, 1, 2, 3, 4, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26]
 sort-col=0
 sort-order=0
@@ -281,6 +298,10 @@ zoom-level=14
 [org/gnome/mutter]
 edge-tiling=false
 
+[org/gnome/mutter/keybindings]
+toggle-tiled-left=@as []
+toggle-tiled-right=@as []
+
 [org/gnome/nautilus/list-view]
 default-zoom-level='small'
 use-tree-view=false
@@ -292,12 +313,17 @@ search-filter-time-type='last_modified'
 
 [org/gnome/nautilus/window-state]
 initial-size=(1204, 578)
+initial-size-file-chooser=(890, 550)
 
 [org/gnome/nm-applet/eap/16c1499a-31bb-4977-9d50-0576220e00a9]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
 [org/gnome/nm-applet/eap/1e2dcadb-badf-4373-a835-0203ddc30deb]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
+[org/gnome/nm-applet/eap/52c1c392-1003-4563-bc38-a2ebb22609f4]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
@@ -333,6 +359,10 @@ ignore-phase2-ca-cert=false
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
+[org/gnome/nm-applet/eap/b5571833-30fb-410e-85be-515be639e94b]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
 [org/gnome/nm-applet/eap/c16440d9-425c-4cca-a66f-ab84f66ba184]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
@@ -342,6 +372,10 @@ ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
 [org/gnome/nm-applet/eap/e3149a1a-64bb-4c99-8893-13b498016fc3]
+ignore-ca-cert=false
+ignore-phase2-ca-cert=false
+
+[org/gnome/nm-applet/eap/ee390c9f-8831-317f-957c-c33ad97599e7]
 ignore-ca-cert=false
 ignore-phase2-ca-cert=false
 
@@ -362,6 +396,9 @@ last-folder-path='/home/dan/Documents/Programming/VS Code/Square'
 [org/gnome/portal/filechooser/io.dbeaver.DBeaverCommunity]
 last-folder-path='/home/dan/Downloads'
 
+[org/gnome/portal/filechooser/org.fedoraproject.MediaWriter]
+last-folder-path='/home/dan/Downloads/qemu/freebsd'
+
 [org/gnome/portal/filechooser/org.gnome.DejaDup]
 last-folder-path='/home/dan/.config/ABarthel/little_navmap_db'
 
@@ -373,6 +410,7 @@ last-folder-path='/home/dan/Downloads'
 
 [org/gnome/settings-daemon/plugins/color]
 night-light-enabled=true
+night-light-schedule-automatic=false
 night-light-temperature=uint32 3562
 
 [org/gnome/settings-daemon/plugins/media-keys]
@@ -409,7 +447,7 @@ sleep-inactive-ac-type='nothing'
 
 [org/gnome/shell]
 app-picker-layout=[{'org.gnome.clocks.desktop': <{'position': <0>}>, 'org.gnome.Maps.desktop': <{'position': <1>}>, 'org.gnome.Snapshot.desktop': <{'position': <2>}>, 'com.mattjakeman.ExtensionManager.desktop': <{'position': <3>}>, 'org.gnome.Extensions.desktop': <{'position': <4>}>, 'simple-scan.desktop': <{'position': <5>}>, 'org.fedoraproject.MediaWriter.desktop': <{'position': <6>}>, 'org.gnome.SystemMonitor.desktop': <{'position': <7>}>, 'google-chrome.desktop': <{'position': <8>}>, 'Utilities': <{'position': <9>}>, 'htop.desktop': <{'position': <10>}>, 'yelp.desktop': <{'position': <11>}>}, {'anydesk.desktop': <{'position': <0>}>, 'wine-Programs-EchoLink-EchoLink.desktop': <{'position': <1>}>, 'wine-LTspice XVII.desktop': <{'position': <2>}>, 'wine-Programs-MMANA-GAL_Basic-MMANA-GAL_Basic.desktop': <{'position': <3>}>, 'chrome-faolnafnngnfdaknnbpnkhgohbobgegn-Default.desktop': <{'position': <4>}>, 'wine-Programs-MMANA-GAL_Basic-Uninstall MMANA-GALpro.desktop': <{'position': <5>}>, 'org.arrl.trustedqsl.desktop': <{'position': <6>}>, 'flarq.desktop': <{'position': <7>}>, 'jtdx.desktop': <{'position': <8>}>, 'flrig.desktop': <{'position': <9>}>, 'gnuradio-grc.desktop': <{'position': <10>}>, 'org.audacityteam.Audacity.desktop': <{'position': <11>}>, 'org.kde.digikam.desktop': <{'position': <12>}>, 'linhpsdr.desktop': <{'position': <13>}>, 'wine-notepad.desktop': <{'position': <14>}>, 'wine-regedit.desktop': <{'position': <15>}>, 'wine-wineboot.desktop': <{'position': <16>}>, 'wine-winecfg.desktop': <{'position': <17>}>, 'wine-winefile.desktop': <{'position': <18>}>, 'wine-winemine.desktop': <{'position': <19>}>, 'io.dbeaver.DBeaverCommunity.desktop': <{'position': <20>}>, 'wine-winhelp.desktop': <{'position': <21>}>, 'wine-oleview.desktop': <{'position': <22>}>, 'wine-uninstaller.desktop': <{'position': <23>}>}, {'wine-wordpad.desktop': <{'position': <0>}>, 'winetricks.desktop': <{'position': <1>}>, 'com.github.PintaProject.Pinta.desktop': <{'position': <2>}>, 'org.keepassxc.KeePassXC.desktop': <{'position': <3>}>, 'pcmanfm-qt-desktop-pref.desktop': <{'position': <4>}>, 'dosbox-staging.desktop': <{'position': <5>}>, 'filezilla.desktop': <{'position': <6>}>, 'gpredict.desktop': <{'position': <7>}>, 'org.kicad.kicad.desktop': <{'position': <8>}>, 'org.kicad.gerbview.desktop': <{'position': <9>}>, 'org.kicad.bitmap2component.desktop': <{'position': <10>}>, 'org.kicad.pcbcalculator.desktop': <{'position': <11>}>, 'org.kicad.pcbnew.desktop': <{'position': <12>}>, 'org.kicad.eeschema.desktop': <{'position': <13>}>, 'com.github.reds.LogisimEvolution.desktop': <{'position': <14>}>, 'opencascade-draw.desktop': <{'position': <15>}>, 'pcmanfm-qt.desktop': <{'position': <16>}>, 'message_aggregator.desktop': <{'position': <17>}>, 'qterminal.desktop': <{'position': <18>}>, 'qterminal-drop.desktop': <{'position': <19>}>, 'remote-viewer.desktop': <{'position': <20>}>, 'satdump.desktop': <{'position': <21>}>, 'org.gnome.Meld.desktop': <{'position': <22>}>, 'virt-manager.desktop': <{'position': <23>}>}, {'org.rncbc.qjackctl.desktop': <{'position': <0>}>, 'com.nextcloud.desktopclient.nextcloud.desktop': <{'position': <1>}>, 'com.wps.Office.desktop': <{'position': <2>}>, 'com.wps.Office.pdf.desktop': <{'position': <3>}>, 'com.wps.Office.wpp.desktop': <{'position': <4>}>, 'com.wps.Office.et.desktop': <{'position': <5>}>, 'com.wps.Office.wps.desktop': <{'position': <6>}>, 'wsjtx.desktop': <{'position': <7>}>, 'org.onlyoffice.desktopeditors.desktop': <{'position': <8>}>, 'org.sdrangel.SDRangel.desktop': <{'position': <9>}>, 'org.kde.showfoto.desktop': <{'position': <10>}>, 'vlc.desktop': <{'position': <11>}>}]
-command-history=['smb://192.168.0.2']
+command-history=['smb://192.168.0.2', 'gnome-session-properties']
 disable-user-extensions=false
 disabled-extensions=['window-list@gnome-shell-extensions.gcampax.github.com', 'auto-move-windows@gnome-shell-extensions.gcampax.github.com', 'places-menu@gnome-shell-extensions.gcampax.github.com']
 enabled-extensions=['background-logo@fedorahosted.org', 'dash-to-dock@micxgx.gmail.com', 'ding@rastersoft.com', 'freon@UshakovVasilii_Github.yahoo.com', 'tiling-assistant@leleat-on-github']
@@ -422,8 +460,9 @@ welcome-dialog-last-shown-version='46.0'
 application-list=['org.mozilla.firefox.desktop:1', 'virt-manager.desktop:3']
 
 [org/gnome/shell/extensions/dash-to-dock]
-background-opacity=0.80000000000000004
-custom-theme-shrink=false
+background-opacity=0.17000000000000001
+custom-theme-shrink=true
+customize-alphas=false
 dash-max-icon-size=39
 dock-fixed=false
 dock-position='BOTTOM'
@@ -431,6 +470,7 @@ height-fraction=0.90000000000000002
 hot-keys=true
 intellihide-mode='FOCUS_APPLICATION_WINDOWS'
 isolate-workspaces=false
+max-alpha=0.80000000000000004
 preferred-monitor=-2
 preferred-monitor-by-connector='eDP-1'
 preview-size-scale=0.29999999999999999
@@ -438,6 +478,7 @@ require-pressure-to-show=false
 show-favorites=true
 show-running=true
 show-windows-preview=true
+transparency-mode='DYNAMIC'
 
 [org/gnome/shell/extensions/ding]
 add-volumes-opposite=false
@@ -475,8 +516,10 @@ debugging-free-rects=@as []
 debugging-show-tiled-rects=@as []
 default-move-mode=0
 dynamic-keybinding-behavior=1
+focus-hint=0
+focus-hint-color='rgb(53,132,228)'
 import-layout-examples=false
-last-version-installed=48
+last-version-installed=49
 overridden-settings={'org.gnome.mutter.edge-tiling': <@mb nothing>}
 restore-window=['<Alt>BackSpace']
 search-popup-layout=@as []
@@ -505,17 +548,25 @@ toggle-always-on-top=@as []
 toggle-tiling-popup=@as []
 window-gap=0
 
+[org/gnome/shell/keybindings]
+switch-to-application-1=@as []
+switch-to-application-2=@as []
+switch-to-application-3=@as []
+switch-to-application-4=@as []
+
 [org/gnome/shell/world-clocks]
 locations=@av []
 
 [org/gnome/software]
-check-timestamp=int64 1730279894
+check-timestamp=int64 1730876601
+download-updates=false
 first-run=false
-flatpak-purge-timestamp=int64 1730249678
-install-timestamp=int64 1729101587
-packagekit-historical-updates-timestamp=uint64 1729101587
+flatpak-purge-timestamp=int64 1731409345
+install-timestamp=int64 1730643317
+packagekit-historical-updates-timestamp=uint64 1730842275
 security-timestamp=int64 1728722812716022
-update-notification-timestamp=int64 1729101624
+update-notification-timestamp=int64 1730643358
+upgrade-notification-timestamp=int64 1730303358
 
 [org/gnome/system/location]
 enabled=false
@@ -596,13 +647,24 @@ graphics-type='spice'
 image-default='/home/dan/Downloads/qemu/freebsd14'
 media-default='/home/dan/Downloads/qemu/netbsd'
 perms-fix-ignore=['/home/dan']
+screenshot-default='/home/dan/Downloads/qemu/freebsd'
 
 [org/virt-manager/virt-manager/urls]
-isos=['/home/dan/Downloads/qemu/netbsd/NetBSD-10.0-amd64.iso', '/home/dan/Downloads/qemu/freebsd/FreeBSD-14.1-RELEASE-amd64-dvd1.iso', '/home/dan/Downloads/qemu/openbsd76/openbsd_x64_install76.iso', '/home/dan/Downloads/qemu/freebsd14/FreeBSD-14.1-RELEASE-amd64-disc1.iso', '/home/dan/Downloads/qemu/fedora/Fedora-Onyx-ostree-x86_64-40-1.14.iso', '/home/dan/Downloads/qemu/official-red-hat-linux-4.0-cd1.iso', '/home/dan/Downloads/qemu/zenwalk-current-230909.iso', '/home/dan/Downloads/qemu/FreeBSD-14.1-RELEASE-amd64-disc1.iso', '/home/dan/Downloads/qemu/minix_R3.3.0-588a35b.iso', '/home/dan/Downloads/qemu/minix_R3.4.0rc-3640e39.iso']
+isos=['/home/dan/Downloads/qemu/freebsd/FreeBSD-15.0-CURRENT-amd64-20241107-5036d9652a57-273504-disc1.iso', '/home/dan/Downloads/qemu/freebsd/GhostBSD-24.07.3.iso', '/home/dan/Downloads/qemu/freebsd/Fedora-Workstation-Live-x86_64-41-1.4.iso', '/home/dan/Downloads/qemu/freebsd/ravynOS_0.5.1_f15_amd64.iso', '/home/dan/Downloads/qemu/netbsd/NetBSD-10.0-amd64.iso', '/home/dan/Downloads/qemu/freebsd/FreeBSD-14.1-RELEASE-amd64-dvd1.iso', '/home/dan/Downloads/qemu/openbsd76/openbsd_x64_install76.iso', '/home/dan/Downloads/qemu/freebsd14/FreeBSD-14.1-RELEASE-amd64-disc1.iso', '/home/dan/Downloads/qemu/fedora/Fedora-Onyx-ostree-x86_64-40-1.14.iso', '/home/dan/Downloads/qemu/official-red-hat-linux-4.0-cd1.iso']
 
 [org/virt-manager/virt-manager/vmlist-fields]
 disk-usage=false
 network-traffic=false
+
+[org/virt-manager/virt-manager/vms/0e4243a3cb204e85aac4ddbe989a6fc9]
+autoconnect=1
+scaling=1
+vm-window-size=(1280, 832)
+
+[org/virt-manager/virt-manager/vms/0f1d3c96dcfb40398b1c49a7ba5e0544]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
 
 [org/virt-manager/virt-manager/vms/1386b570b59e4e04aa8411071bf2d6b9]
 autoconnect=1
@@ -659,6 +721,16 @@ autoconnect=1
 scaling=1
 vm-window-size=(1024, 810)
 
+[org/virt-manager/virt-manager/vms/7971e89ae6344598bc4088f84b8d702f]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
+[org/virt-manager/virt-manager/vms/832f66e7234743a7aeef14460c6f60a0]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
 [org/virt-manager/virt-manager/vms/9002911820204c448d5516fa2045cf7f]
 autoconnect=1
 scaling=1
@@ -669,7 +741,22 @@ autoconnect=1
 scaling=1
 vm-window-size=(1024, 810)
 
+[org/virt-manager/virt-manager/vms/974c319b425c402ca56e1234645cadee]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
 [org/virt-manager/virt-manager/vms/98a1a31b00324191a8805987260f4b2c]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
+[org/virt-manager/virt-manager/vms/9c7149e975214c3c9457de0759f31772]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
+[org/virt-manager/virt-manager/vms/a0920ff24cb64360ad8c3edb5a34cdf8]
 autoconnect=1
 scaling=1
 vm-window-size=(1024, 810)
@@ -684,6 +771,16 @@ autoconnect=1
 scaling=1
 vm-window-size=(1024, 810)
 
+[org/virt-manager/virt-manager/vms/ad0e46d5bf1949e9a50491cee643a680]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
+[org/virt-manager/virt-manager/vms/b0176ae1348348248e4b6465c8b16ae3]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
 [org/virt-manager/virt-manager/vms/b19274f9732748328a7cda8ddc526ef2]
 autoconnect=1
 scaling=1
@@ -694,12 +791,37 @@ autoconnect=1
 scaling=1
 vm-window-size=(1024, 837)
 
+[org/virt-manager/virt-manager/vms/c1fa0b6c953b4b70956f5a7e8a98b68e]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
 [org/virt-manager/virt-manager/vms/c3b1d684f20d4ba6acc864c35650601a]
 autoconnect=1
 scaling=1
 vm-window-size=(1024, 810)
 
+[org/virt-manager/virt-manager/vms/c909c77035b24cfd81b4198bc12778e0]
+autoconnect=1
+scaling=1
+vm-window-size=(1024, 810)
+
+[org/virt-manager/virt-manager/vms/e41556bd3630465385193365fd27bc2e]
+autoconnect=1
+scaling=1
+vm-window-size=(1280, 810)
+
+[org/virt-manager/virt-manager/vms/e8a3585252f949f2a91e544716acbc37]
+autoconnect=1
+scaling=1
+vm-window-size=(1920, 1043)
+
 [org/virt-manager/virt-manager/vms/e937e129a5144c728f47cabfb3573d11]
 autoconnect=1
 scaling=1
 vm-window-size=(1280, 789)
+
+[org/virt-manager/virt-manager/vms/fc7ef26e823c4971b162e150cf11c9be]
+autoconnect=1
+scaling=1
+vm-window-size=(1920, 1011)
