updated mac config files

--- a/macbook/boot/loader.conf
+++ b/macbook/boot/loader.conf
@@ -5,11 +5,7 @@ geom_eli_load="YES"
 vfs.zfs.arc_max="512M"
 zfs_load="YES"
 wsp_load="YES"
-
-#hkbd_load="YES" # load hkbd
-#hw.usb.usbhid.enable="1"
-#usbhid_load="YES"
-#uhid_load="NO"
+fuse_load="YES"
 
 asmc_load="YES"
 sysctlinfo_load="YES"
@@ -32,4 +28,8 @@ compat.linuxkpi.i915_enable_fbc=1
 compat.linuxkpi.i915_enable_rc6=7
 compat.linuxkpi.i915_semaphores=1
 compat.linuxkpi.i915_disable_power_well=1
+
+#wifi tweaks
+legal.realtek.license_ack=1
+dev.rtwn.0.ht40=1
 
