--- a/macbook/etc/rc.conf
+++ b/macbook/etc/rc.conf
@@ -11,11 +11,12 @@ webcamd_enable="NO"
 cupsd_enable="YES"
 avahi_daemon_enable="YES"
 avahi_dnsconfd_enable="YES"
+moused_port="wsp0"
 moused_enable="YES"
 ipfw_enable="NO"
 firewall_enable="NO"
 wlans_rsu0="wlan0"
-ifconfig_wlan0="WPA DHCP"
+ifconfig_wlan0="WPA SYNCDHCP country RO"
 backgroupd_dhclient_wlan0="YES"
 defaultroute_delay="0"
 keymap="us.kbd"
