--- a/macbook/etc/rc.conf
+++ b/macbook/etc/rc.conf
@@ -19,6 +19,8 @@ wlans_rsu0="wlan0"
 ifconfig_wlan0="WPA SYNCDHCP country RO"
 backgroupd_dhclient_wlan0="YES"
 defaultroute_delay="0"
+ifconfig_wlan0_ipv6="inet6 accept_rtadv"
+ipv6_enable="YES"
 keymap="us.kbd"
 hostname="dan-bsd"
 sdpd_enable="YES"
