--- a/macbook/etc/sysctl.conf
+++ b/macbook/etc/sysctl.conf
@@ -85,7 +85,7 @@ hw.snd.maxautovchans=16
 
 #touchpad fine tuning
 hw.usb.wsp.z_invert=1
-hw.usb.wsp.z_factor=10
+hw.usb.wsp.scale_factor=8
 
 #suspend/resume
 hw.acpi.lid_switch_state=S3
